Simple implementation on the Deposit function

--- a/BankTestsMoq/BankTestsMoq.csproj
+++ b/BankTestsMoq/BankTestsMoq.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Atm\Atm.csproj" />
+      <ProjectReference Include="..\AtmSystem\AtmSystem.csproj" />
     </ItemGroup>
 
 </Project>
